# gitlite

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
include/: Commit.hpp  GitEngine.h  GitliteException.h  Repository.h  Serialization.hpp  Utils.h
src/: GitEngine.cpp  GitliteException.cpp  Repository.cpp  Utils.cpp
testing/: out.txt
